fix spacing

--- a/slides.scss
+++ b/slides.scss
@@ -12,11 +12,11 @@
     "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
-.title-slide {
-    // background-image: url("NIH_slide_background.png");
-    color: #ffffff !important;
-}
-
 .footer {
     font-size: 0.25rem;
+    color: #000 !important;
+}
+
+.title-slide {
+    color: #fff !important;
 }
